@@ -1,5 +1,10 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Rewrite parseBraces() so that nested braces are properly handled. Nope,
+	this is not nice-to-read code. Definitely not.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Add /graph drawing/register node coordinate key. This key allows
 	coordinate options like at={(x,y)} to be specified for nodes.
 
